fix: text overflow in search cards
Fixed text from overflowing when text is longer than expected. This way every card should have the same structure

--- a/src/features/search/styles/search.module.scss
+++ b/src/features/search/styles/search.module.scss
@@ -50,6 +50,9 @@
   align-items: center;
   flex-direction: column;
   padding-top: 10px;
+  overflow: scroll;
+  max-width: 160px;
+  max-height: 100px;
 }
 
 .centerSvg {
@@ -85,7 +88,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 38px;
+  padding-top: 35px;
+  overflow: scroll;
+  max-width: 175px;
+  min-width: 175px;
+  max-height: 90px;
 }
 
 .cleanParagraph {
@@ -94,6 +101,9 @@
   font-size: medium;
   font-weight: 500;
   text-align: center;
+  max-height: 45px;
+  min-height: 45px;
+  overflow: scroll;
 }
 
 .centerParagraph {
